--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,13 @@ See the end for copying conditions.
 Please send GNU C library bug reports via <http://sourceware.org/bugzilla/>
 using `glibc' in the "product" field.
 
+Version 2.19.1
+
+* The following bugs are resolved with this release:
+
+  16545, 16623, 16882, 16885, 16916, 16943, 16958.
+
+
 Version 2.19
 
 * The following bugs are resolved with this release:
