--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,34 @@
+glibc (2.19-9) unstable; urgency=medium
+
+  [ Aurelien Jarno ]
+  * debian/rules.d/control.mk: don't add libc6{,-dev}-{armel,armhf}
+    packages in debian/control as we don't build them in Debian. New dak
+    code checks for NEW packages directly in debian/control.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Thu, 14 Aug 2014 17:58:27 +0200
+
+glibc (2.19-8) unstable; urgency=medium
+
+  [ Helmut Grohne ]
+  * debian/patches/build stage2 without selinux.  Closes: #742640.
+  * Don't emit dependencies on libgcc when building stage2.  Closes: #755580.
+  * Add a "nobiarch" build profile that inhibits all multilib packages from
+    being built.  Closes: #745380.
+
+  [ Aurelien Jarno ]
+  * debian/patches/arm64/cvs-includes-cleanup.diff: new patch from upstream to
+    clean sys/user.h and sys/procfs.h.  Closes: #755169.
+  * debian/patches/s390/cvs-s390-abi-reversal.diff: new patch backported from
+    upstream to revert the S/390 jmp_buf/ucontext_t ABI change.
+  * Update Turkish debconf translation, by Mert Dirik.  Closes: #757495.
+  * Remove ia64 support.  Closes: #756095.
+  * Update debian/copyright with the libidn/punycode.{c,h} license.  Closes: 
+    #754731.
+  * debian/control/libc: drop Recommends on: gcc | c-compiler.  Closes:
+    #747933.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Thu, 14 Aug 2014 15:54:09 +0200
+
 glibc (2.19-7) unstable; urgency=high
 
   * debian/patches/localedata/unsubmitted-tst-setlocale3-ENV.diff: Apply
