--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+glibc (2.21-1) unstable; urgency=medium
+
+  [ Aurelien Jarno ]
+  * testsuite-checking/expected-results-mips64el-linux-gnu-*: allow 
+    nptl/tst-cancel24-static to fail on mips64el.  It's an upstream regression
+    only affecting static binaries currently under investigation.
+  * patches/hppa/submitted-mathdef.diff: update to include the ABI baseline
+    changes.
+  * testsuite-checking/expected-results-*kfreebsd-gnu-*: re-add rt/tst-shm as
+    it seems it can still occasionally fail on the buildds.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 01 Dec 2015 00:17:43 +0100
+
 glibc (2.21-0experimental4) experimental; urgency=medium
 
   [ Aurelien Jarno ]
