--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,26 @@
+glibc (2.22-0experimental3) experimental; urgency=medium
+
+  [ Aurelien Jarno ]
+  * Update from upstream stable branch:
+    - debian/patches/any/local-CVE-2015-7547.diff: drop, merged upstream.
+  * debian/testsuite-xfail-debian.mk (hurd): correctly detect Hurd. Mark tests
+    failing to build as unsupported. Update for glibc 2.22.
+  * debian/patches/hurd-i386/submitted-hurd-abilist.diff: new patch to get the
+    abilist tests buildable on Hurd.
+  * debian/testsuite-xfail-debian.mk (mips): correctly detect 64-bit mips
+    flavours.
+  * debian/testsuite-xfail-debian.mk (hppa): mark new tests which fail as
+    xfail.
+  * debian/testsuite-xfail-debian.mk (alpha): mark new tests which fail as
+    xfail.
+  * control.in/main: Bump Standards-Version to 3.9.7 (no changes).
+  * debian/patches/sparc/submitted-sparc64-socketcall.diff: new patch to fix
+    bind(), listen() and setsockopt()when built against 4.4+ kernel headers.
+  * Update German debconf translation, by Helge Kreutzman.  Closes: #815697.
+  * Update Japanese debconf translation, by Takuma Yamada.  Closes: #815858.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 01 Mar 2016 18:56:42 +0100
+
 glibc (2.22-0experimental2) experimental; urgency=medium
 
   [ Aurelien Jarno ]
@@ -216,6 +239,25 @@ glibc (2.22-0experimental0) experimental; urgency=medium
   * debian/patches/any/cvs-mangle-tls_dtor_list.diff: Upstream.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 02 Dec 2015 00:06:13 +0100
+
+glibc (2.21-9) unstable; urgency=medium
+
+  [ Aurelien Jarno ]
+  * Update from upstream stable branch:
+    - Fixes bug18240 failing with a timeout on machines with a lot of swap.
+      Closes: #814958.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 17 Feb 2016 18:45:59 +0100
+
+glibc (2.21-8) unstable; urgency=critical
+
+  * Update from upstream stable branch:
+    - Fix an integer overflow in hcreate() and hcreate_r() (CVE-2015-8778).
+      Closes: #812441.
+  * patches/any/local-CVE-2015-7547.diff: new patch to fix glibc getaddrinfo
+    stack-based buffer overflow (CVE-2015-7547).
+
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 15 Feb 2016 21:38:15 +0100
 
 glibc (2.21-7) unstable; urgency=medium
 
