--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+glibc (2.22-1) unstable; urgency=medium
+
+  [ Aurelien Jarno ]
+  * debian/testsuite-xfail-debian.mk (alpha): mark a few failures which
+    are not a regression compared to 2.21 as xfail.
+  * debian/testsuite-xfail-debian.mk (hurd): mark another failure which
+    is not a regression compared to 2.21 as xfail.
+  * debian/control.in/main: avoid experimental versions, use versions that
+    went through unstable instead.
+
+  [ Samuel Thibault ]
+  * control: Accept hurd-headers-dev and libihash-dev as alternatives to
+    hurd-dev for bootstrapping.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 07 Mar 2016 12:38:18 +0100
+
 glibc (2.22-0experimental3) experimental; urgency=medium
 
   [ Aurelien Jarno ]
