--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+glibc (2.23.90+20160725.b898b64-1) experimental; urgency=medium
+
+  [ Aurelien Jarno ]
+  * New upstream snapshot from 20160725.
+  * debian/testsuite-xfail-debian.mk: remove HPPA math tests from XFAIL,
+    the problem is fixed from some time already.
+  * debian/patches/powerpc/submitted-powerpc-ifunc-sel.diff: new patch to
+    fix the ifunc tests with GCC 6 on PowerPC.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 25 Jul 2016 23:38:37 +0200
+
 glibc (2.23.90+20160719.2c3d888-1) experimental; urgency=medium
 
   [ Samuel Thibault ]
@@ -93,6 +104,18 @@ glibc (2.23.90+20160507.87523e9-1) experimental; urgency=medium
     former was deprecated and has been removed.
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 05 Jul 2016 20:47:21 +0200
+
+glibc (2.23-3) unstable; urgency=medium
+
+  [ Samuel Thibault ]
+  * hurd-i386/libpthread_version.diff: Update with pthread_setcancelstate
+    aliasing.
+
+  [ Aurelien Jarno ]
+  * patches/kfreebsd/local-sysdeps.diff: update to revision 6097 (from
+    glibc-bsd).
+
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 25 Jul 2016 23:23:29 +0200
 
 glibc (2.23-2) unstable; urgency=medium
 
