--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+glibc (2.24-0experimental0) experimental; urgency=medium
+
+  * New upstream release: version 2.24.
+  * debian/patches/hurd-i386/submitted-malloc-setstate.diff: only apply on
+    hurd-i386, as it causes regressions on at least x32.
+  * debian/rules.d/tarball.mk: make the orig tarball generation a bit more
+    reproducible.
+  * debian/sysdeps/sparc64.mk: compile all flavours with -mcpu=ultrasparc.
+  * debian/patches/submitted-sparc-fdim.diff: new patch to fix fdimf and
+    fdim function on SPARC.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Thu, 04 Aug 2016 03:13:12 +0200
+
 glibc (2.23.90+20160725.b898b64-1) experimental; urgency=medium
 
   [ Aurelien Jarno ]
@@ -104,6 +117,22 @@ glibc (2.23.90+20160507.87523e9-1) experimental; urgency=medium
     former was deprecated and has been removed.
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 05 Jul 2016 20:47:21 +0200
+
+glibc (2.23-4) unstable; urgency=medium
+
+  [ Aurelien Jarno ]
+  * patches/kfreebsd/local-sysdeps.diff: update to revision 6098 (from
+    glibc-bsd).
+  * debian/debhelper.in/libc.postinst: drop code to handle the /var/mail
+    transition for pre-Potato installations.
+  * debian/debhelper.in/libc.{preinst,postinst}, debian/script.in/nohwcap.sh:
+    Remove fallback to dpkg --print-architecture for pre-multiarch systems.
+  * debian/debhelper.in/libc.{preinst,postinst}: do not run the NSS check
+    code from a chroot as it might not have an init system installed.
+  * debian/testsuite-xfail-debian.mk: allow tst-robust8 to fail on amd64, it
+    is an intermittent failure that might be due to a kernel issue.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 27 Jul 2016 00:39:51 +0200
 
 glibc (2.23-3) unstable; urgency=medium
 
@@ -522,7 +551,7 @@ glibc (2.22-4) unstable; urgency=medium
 
   [ Aurelien Jarno ]
   * Update from upstream stable branch:
-    - Fix a memory leak in the resolver.  Closes: #818178.
+    - Fix a memory leak in the resolver (CVE-2016-5417).  Closes: #818178.
   * debian/patches/localedata/fr_CA-first_weekday.diff: drop.  Closes:
     #769051.
   * debian/rules, debian/rules.d/build.mk: move the C.UTF-8 locale and
