--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the glibc package.
 # Bart Cornelis <cobaco@skolelinux.no>, 2008.
 # Vincent Zweije <vincent@zweije.nl>, 2011.
-# Frans Spiesschaert <Frans.Spiesschaert@yucom.be>, 2016.
+# Frans Spiesschaert <Frans.Spiesschaert@yucom.be>, 2016, 2017.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: glibc 2.21-6\n"
 "Report-Msgid-Bugs-To: glibc@packages.debian.org\n"
 "POT-Creation-Date: 2017-06-13 22:11+0200\n"
-"PO-Revision-Date: 2016-01-12 18:15+0100\n"
+"PO-Revision-Date: 2017-06-23 20:15+0200\n"
 "Last-Translator: Frans Spiesschaert <Frans.Spiesschaert@yucom.be>\n"
 "Language-Team: Debian Dutch l10n Team <debian-l10n-dutch@lists.debian.org>\n"
 "Language: nl\n"
@@ -275,7 +275,6 @@ msgstr "Niet-ondersteunde kernelversie"
 #. Type: note
 #. Description
 #: ../debhelper.in/libc.templates:7001
-#, fuzzy
 #| msgid ""
 #| "This version of the GNU libc requires kernel version ${kernel_ver} or "
 #| "later.  Older versions might work but are not officially supported.  "
@@ -287,5 +286,5 @@ msgid ""
 msgstr ""
 "Deze versie van GNU libc heeft kernel versie ${kernel_ver} of een meer "
 "recente versie nodig. Het kan zijn dat oudere versies wel werken, maar "
-"officieel wordt dit niet ondersteund. U zou er best aan doen uw kernel op te "
-"waarderen."
+"officieel wordt dit niet ondersteund door Debian. U zou er best aan doen uw "
+"kernel op te waarderen."
