--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,37 @@
+glibc (2.24-13) unstable; urgency=medium
+
+  [ Aurelien Jarno ]
+  * debian/patches/git-updates.diff: update from upstream stable branch:
+    - Fix ld.so segfault on arm64.
+    - Fix build with newer binutils.  Closes: #869717.
+    - debian/patches/any/submitted-perl-inc.diff: drop, upstreamd.
+    - debian/patches/any/local-CVE-2017-1000366-rtld-LD_LIBRARY_PATH.diff:
+      drop, upstreamd.
+    - debian/patches/any/local-CVE-2017-1000366-rtld-LD_PRELOAD.diff: drop,
+      upstreamed.
+    - debian/patches/any/local-CVE-2017-1000366-rtld-LD_AUDIT.diff: drop,
+      upstreamed.
+    - debian/patches/any/cvs-vectorized-strcspn-guards.diff: drop, upstreamed.
+    - debian/patches/any/cvs-hwcap-AT_SECURE.diff: drop, upstreamed.
+  * debian/rules.d/debhelper.mk: relax the dependency on linux-libc-dev to the
+    upstream version.
+  * Greek debconf translation update from Vangelis Skarmoutsos.  Closes:
+    #867474.
+  * Update Dutch debconf translation, by Frans Spiesschaert.  Closes: #867981.
+  * debian/debhelper.in/libc-bin.triggers: declare the trigger as
+    interest-await.
+  * debian/control.in/*: Demote gcc-multilib 'Recommends' to a 'Suggests'.
+    Closes: #865429.
+
+  [ Adam Conrad ]
+  * debian/patches/arm/submitted-strip-bit-0.diff: Fix ld.so crash on armv7t.
+
+  [ Santiago Vila ]
+  * debian/debhelper.in/libc-bin.postinst: do not update /etc/nsswitch.conf
+    when its content already matches the default.  Closes: #865144.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 31 Jul 2017 16:54:16 +0200
+
 glibc (2.24-12) unstable; urgency=high
 
   [ Aurelien Jarno ]
