--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -1,17 +1,18 @@
 # Translation of glibc debconf templates to French
-# Copyright (C) 2005-2009 Debian French l10n team <debian-l10n-french@lists.debian.org>
+# Copyright (C) 2001-2009, 2011, 2015, 2017 Debian French l10n team <debian-l10n-french@lists.debian.org>
 # This file is distributed under the same license as the glibc package.
 #
 # Translators:
 # Denis Barbier 2001-2006.
 # Christian Perrier <bubulle@debian.org>, 2007, 2008, 2009, 2011, 2015.
+# Alban Vidal <alban.vidal@zordhak.fr>, 2017.
 msgid ""
 msgstr ""
-"Project-Id-Version: fr\n"
+"Project-Id-Version: glibc 2.24-14\n"
 "Report-Msgid-Bugs-To: glibc@packages.debian.org\n"
 "POT-Creation-Date: 2017-06-13 22:11+0200\n"
-"PO-Revision-Date: 2015-12-17 06:47+0100\n"
-"Last-Translator: Christian Perrier <bubulle@debian.org>\n"
+"PO-Revision-Date: 2017-08-04 14:44+0100\n"
+"Last-Translator: Alban Vidal <alban.vidal@zordhak.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
@@ -41,7 +42,7 @@ msgid ""
 msgstr ""
 "Les jeux de paramètres régionaux (aussi appelés « locales ») permettent de "
 "gérer des langues multiples et offrent aux utilisateurs la possibilité de "
-"choisir la langue, le pays, le jeu de caractères, l'ordre de tri, etc."
+"choisir la langue, le pays, le jeu de caractères, l'ordre de tri, etc."
 
 #. Type: multiselect
 #. Description
@@ -97,7 +98,7 @@ msgstr ""
 #. Description
 #: ../debhelper.in/libc.templates:1001
 msgid "Do you want to upgrade glibc now?"
-msgstr "Faut-il mettre à jour le paquet glibc maintenant ?"
+msgstr "Faut-il mettre à niveau le paquet glibc maintenant ?"
 
 #. Type: boolean
 #. Description
@@ -127,7 +128,7 @@ msgid ""
 "before the upgrade: ${services}"
 msgstr ""
 "Les services identifiés comme devant être redémarrés et qui doivent être "
-"arrêtés avant la mise à jour sont les suivants : ${services}."
+"arrêtés avant la mise à niveau sont les suivants : ${services}."
 
 #. Type: boolean
 #. Description
@@ -136,14 +137,15 @@ msgid ""
 "If you want to interrupt the upgrade now and continue later, please answer "
 "No to the question below."
 msgstr ""
-"Si vous préférez interrompre la mise à jour maintenant et la reprendre plus "
-"tard, ne choisissez pas cette option."
+"Si vous préférez interrompre la mise à niveau maintenant et la reprendre "
+"plus tard, ne choisissez pas cette option."
 
 #. Type: string
 #. Description
 #: ../debhelper.in/libc.templates:2001
 msgid "Services to restart for GNU libc library upgrade:"
-msgstr "Services à redémarrer lors de la mise à jour de la bibliothèque C :"
+msgstr ""
+"Services à redémarrer lors de la mise à niveau de la bibliothèque C de GNU :"
 
 #. Type: string
 #. Description
@@ -175,7 +177,9 @@ msgstr ""
 #. Description
 #: ../debhelper.in/libc.templates:3001
 msgid "Failure restarting some services for GNU libc upgrade"
-msgstr "Échec du redémarrage de certains services"
+msgstr ""
+"Échec du redémarrage de certains services lors de la mise à niveau de GNU "
+"libc"
 
 #. Type: error
 #. Description
@@ -184,8 +188,8 @@ msgid ""
 "The following services could not be restarted for the GNU libc library "
 "upgrade:"
 msgstr ""
-"Les services suivants n'ont pas pu être redémarrés lors de la mise à jour de "
-"la bibliothèque C :"
+"Les services suivants n'ont pas pu être redémarrés lors de la mise à niveau "
+"de la bibliothèque C de GNU :"
 
 #. Type: error
 #. Description
@@ -201,7 +205,8 @@ msgstr ""
 #. Description
 #: ../debhelper.in/libc.templates:4001
 msgid "xscreensaver and xlockmore must be restarted before upgrading"
-msgstr "Redémarrage nécessaire de xscreensaver et xlockmore avant mise à jour"
+msgstr ""
+"Redémarrage nécessaire de xscreensaver et xlockmore avant mise à niveau"
 
 #. Type: error
 #. Description
@@ -216,7 +221,7 @@ msgid ""
 msgstr ""
 "Une ou plusieurs instances de xscreensaver et/ou de xlockmore ont été "
 "détectées sur le système. À cause de la modification de certaines "
-"bibliothèques, la mise à niveau de la bibliothèque C entrainera "
+"bibliothèques, la mise à niveau de la bibliothèque C de GNU entrainera "
 "l'impossibilité de s'authentifier. Avant de poursuivre la mise à niveau, ces "
 "programmes doivent être redémarrés ou arrêtés pour éviter que des "
 "utilisateurs ne puissent plus accéder à leurs sessions."
@@ -226,7 +231,7 @@ msgstr ""
 #: ../debhelper.in/libc.templates:5001
 msgid "Restart services during package upgrades without asking?"
 msgstr ""
-"Redémarrer inconditionnellement les services lors des mises à jour de "
+"Redémarrer inconditionnellement les services lors des mises à niveau de "
 "paquets ?"
 
 #. Type: boolean
@@ -242,18 +247,18 @@ msgid ""
 "asked questions on each library upgrade."
 msgstr ""
 "Certains services installés sur le système doivent être redémarrés lorsque "
-"certaines bibliothèques, comme libpam, libc ou libssl, sont mises à jour. "
+"certaines bibliothèques, comme libpam, libc ou libssl, sont mises à niveau. "
 "Comme ces redémarrages peuvent conduire à une interruption du service, le "
 "choix de les redémarrer ou non est en général offert lors de ces mises à "
-"jour. Vous pouvez choisir ici que ce choix ne soit plus offert et que les "
-"redémarrages aient lieu systématiquement lors des mises à jour de "
+"niveau. Vous pouvez choisir ici que ce choix ne soit plus offert et que les "
+"redémarrages aient lieu systématiquement lors des mises à niveau de "
 "bibliothèques."
 
 #. Type: error
 #. Description
 #: ../debhelper.in/libc.templates:6001
 msgid "Kernel must be upgraded"
-msgstr "Mise à jour nécessaire du noyau"
+msgstr "Mise à niveau du noyau nécessaire"
 
 #. Type: error
 #. Description
@@ -262,9 +267,9 @@ msgid ""
 "This version of the GNU libc requires kernel version ${kernel_ver} or "
 "later.  Please upgrade your kernel before installing glibc."
 msgstr ""
-"Cette version de la bibliothèque C GNU nécessite au minimum la version "
-"${kernel_ver} du noyau. Veuillez mettre le noyau à jour avant l'installation "
-"de glibc."
+"Cette version de la bibliothèque C de GNU nécessite au minimum la "
+"version ${kernel_ver} du noyau. Veuillez mettre le noyau à niveau avant "
+"l'installation de glibc."
 
 #. Type: note
 #. Description
@@ -275,7 +280,6 @@ msgstr "Version du noyau non gérée"
 #. Type: note
 #. Description
 #: ../debhelper.in/libc.templates:7001
-#, fuzzy
 #| msgid ""
 #| "This version of the GNU libc requires kernel version ${kernel_ver} or "
 #| "later.  Older versions might work but are not officially supported.  "
@@ -285,7 +289,7 @@ msgid ""
 "later.  Older versions might work but are not officially supported by "
 "Debian.  Please consider upgrading your kernel."
 msgstr ""
-"Cette version de la bibliothèque C GNU nécessite au minimum la version "
-"${kernel_ver} du noyau. Des versions antérieures pourraient fonctionner, "
-"mais ne sont pas officiellement gérées. Veuillez prévoir la mise à jour du "
-"noyau."
+"Cette version de la bibliothèque C de GNU nécessite au minimum la "
+"version ${kernel_ver} du noyau. Des versions antérieures pourraient "
+"fonctionner, mais ne sont pas officiellement gérées par Debian. Veuillez "
+"prévoir la mise à niveau du noyau."
