--- a/debian/po/ml.po
+++ b/debian/po/ml.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Glibc 2007_05_26\n"
 "Report-Msgid-Bugs-To: glibc@packages.debian.org\n"
-"POT-Creation-Date: 2017-06-13 22:11+0200\n"
+"POT-Creation-Date: 2017-08-26 13:35+0200\n"
 "PO-Revision-Date: 2007-05-26 15:09+0530\n"
 "Last-Translator: അനൂപ്|Anoop പി|P <gnuanu@gmail.com>, ലാലു|Lalu കെആര്‍|KR "
 "<frecolalu@gmail.com>,സജീവ് |Sajeev പിആര്‍|PR <saju_rrk@yahoo.com>\n"
@@ -168,7 +168,7 @@ msgstr ""
 #. Description
 #: ../debhelper.in/libc.templates:3001
 msgid ""
-"You will need to start these manually by running '/etc/init.d/<service> "
+"You will need to start these manually by running 'invoke-rc.d <service> "
 "start'."
 msgstr ""
 
