--- a/debian/po/el.po
+++ b/debian/po/el.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: el\n"
 "Report-Msgid-Bugs-To: glibc@packages.debian.org\n"
-"POT-Creation-Date: 2017-06-13 22:11+0200\n"
+"POT-Creation-Date: 2017-08-26 13:35+0200\n"
 "PO-Revision-Date: 2017-07-06 21:00+0300\n"
 "Last-Translator: Vangelis Skarmoutsos <skarmoutsosv@gmail.com>\n"
 "Language-Team: Greek <debian-l10n-greek@lists.debian.org>\n"
@@ -200,10 +200,10 @@ msgstr ""
 #. Description
 #: ../debhelper.in/libc.templates:3001
 msgid ""
-"You will need to start these manually by running '/etc/init.d/<service> "
+"You will need to start these manually by running 'invoke-rc.d <service> "
 "start'."
 msgstr ""
-"Θα χρειαστεί να τις εκκινήστε χειροκίνητα τρέχοντας '/etc/init.d/<service> "
+"Θα χρειαστεί να τις εκκινήστε χειροκίνητα τρέχοντας 'invoke-rc.d <service> "
 "start'."
 
 #. Type: error
