--- a/debian/po/fi.po
+++ b/debian/po/fi.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: glibc\n"
 "Report-Msgid-Bugs-To: glibc@packages.debian.org\n"
-"POT-Creation-Date: 2017-06-13 22:11+0200\n"
+"POT-Creation-Date: 2017-08-26 13:35+0200\n"
 "PO-Revision-Date: 2014-06-04 20:45+0200\n"
 "Last-Translator: Esko Arajärvi <edu@iki.fi>\n"
 "Language-Team: Finnish <debian-l10n-finnish@lists.debian.org>\n"
@@ -196,10 +196,10 @@ msgstr ""
 #. Description
 #: ../debhelper.in/libc.templates:3001
 msgid ""
-"You will need to start these manually by running '/etc/init.d/<service> "
+"You will need to start these manually by running 'invoke-rc.d <service> "
 "start'."
 msgstr ""
-"Nämä palvelut tulee käynnistää käsin ajamalla ”/etc/init.d/<palvelu> start”."
+"Nämä palvelut tulee käynnistää käsin ajamalla ”invoke-rc.d <palvelu> start”."
 
 #. Type: error
 #. Description
