--- a/debian/po/pl.po
+++ b/debian/po/pl.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debconf-glibc-locales-pl\n"
 "Report-Msgid-Bugs-To: glibc@packages.debian.org\n"
-"POT-Creation-Date: 2017-06-13 22:11+0200\n"
+"POT-Creation-Date: 2017-08-26 13:35+0200\n"
 "PO-Revision-Date: 2012-01-28 15:33+0100\n"
 "Last-Translator: Michał Kułach <michal.kulach@gmail.com>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
@@ -183,10 +183,10 @@ msgstr "Następujące usługi nie zostały zrestartowane po aktualizacji GNU lib
 #. Description
 #: ../debhelper.in/libc.templates:3001
 msgid ""
-"You will need to start these manually by running '/etc/init.d/<service> "
+"You will need to start these manually by running 'invoke-rc.d <service> "
 "start'."
 msgstr ""
-"Aby zrestartować te usługi ręcznie należy wywołać \"/etc/init.d/<service> "
+"Aby zrestartować te usługi ręcznie należy wywołać \"invoke-rc.d <service> "
 "start\"."
 
 #. Type: error
